
  * commands/info -> info.pm:
    + [NT] Renamed info to info.pm to remove some boilerplate
      code.
    + [NT] Forbid late --user-dirs and --include-dir options.

  * frontend/lintian:
    + [NT] Forbid late --user-dirs and --include-dir options.
    + [NT] Remove the following obsolete command line
      options: --root, --all, --binary, --source, --udeb.
      They are no longer useful.

 -- Niels Thykier <niels@thykier.net>  Thu, 09 Jul 2015 21:50:53 +0200

lintian (2.5.33) unstable; urgency=medium

  * Summary of tag changes:
    + Added:
      - systemd-no-service-for-init-rcS-script
      - trailing-slash-for-dpkg-maintscript-helper-symlink_to_dir
    + Removed:
      - binary-file-compressed-with-upx

  * checks/binaries.pm:
    + [NT] Ignore "v5" suffixes in package names when matching
      SONAMES with package names.  The "v5" suffix is the
      recommended suffix for packages affected by the GCC-5
      libstc++6 C11 ABI breakage.
    + [NT] Drop binary-file-compressed-with-upx as it was not
      working.  (Closes: #790932)
  * checks/cruft.pm:
    + [BR] Increase windows size to 16384 bytes.
      Gain about 10% in cruft.
  * checks/description.desc:
    + [NT] Clarify that the empty-line control statement " ."
      permits no other characters on the same line. Thanks
      to Riley Baird for the report.  (Closes: #789577)
  * checks/files.desc:
    + [JW, NT] Clarify that the ISO 639-1 language codes are
      preferred to the ISO 639-2 variant.  Thanks to Jonas
      Smedegaard for the report.  (Closes: #790693)
  * checks/infofiles.pm:
    + [NT] Fix use of undefined variable in some cases.
  * checks/scripts.{desc,pm}:
    + [BR] Detects problem with dpkg-maintscript-helper symlink_to_dir.
  * checks/systemd.{desc,pm}:
    + [NT] Apply patches from Felipe Sateler to refactor the
      systemd checks.  Notably this also fixes some duplicate
      tags.
    + [NT] Apply patch from Felipe Sateler to warn about rcS